Fix scroll overflow in installer layout
Make it slightly more responsive at smaller window sizes.

// FREEBIE

--- a/stylesheets/manifest.css
+++ b/stylesheets/manifest.css
@@ -3136,9 +3136,6 @@ li.entry .error-icon-container {
   text-align: center;
   font-size: 16px;
   overflow: auto; }
-  @media screen and (max-height: 665px) {
-    #install {
-      height: 666px; } }
   #install input, #install button, #install select, #install textarea {
     font-family: inherit;
     font-size: inherit;
@@ -3165,6 +3162,7 @@ li.entry .error-icon-container {
   #install p {
     max-width: 35em;
     margin: 1em auto;
+    padding: 0 1em;
     line-height: 1.5em;
     font-size: 1.2em;
     font-weight: bold; }
@@ -3186,7 +3184,7 @@ li.entry .error-icon-container {
     width: 100%;
     bottom: 50px;
     margin-top: auto;
-    padding: 0 20px; }
+    padding: 20px; }
     #install .nav .button {
       margin-bottom: 3em; }
     #install .nav .dot {
